<resources>
    <string name="app_name">家装商城用户端</string>
    <string name="verName">v1.0.0</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phoneNum">手机号</string>
    <string name="password">密码</string>
    <string name="main_tab_index">首页</string>
    <string name="main_tab_msg">消息</string>
    <string name="main_tab_trolley">购物车</string>
    <string name="main_tab_mine">我的</string>
    <string name="experience">立即体验</string>
    <string name="publish">发布需求</string>
    <string name="input_phoneNum">输入手机号</string>
    <string name="input_identifyingCode">输入验证码</string>
    <string name="set_password">设置密码</string>
    <string name="send_identifyingCode">发送验证码</string>
    <string name="register_text">短信已下发至：</string>
    <string name="get_code_again">重新获取</string>
    <string name="input_password">请输入您的密码（6～16位）</string>
    <string name="input_again_password">请确认您的密码（6～16位）</string>
    <string name="forget_password">忘记密码</string>
    <string name="get_code">获取验证码</string>
    <string name="identifyingCode">验证码</string>
    <string name="retrieve_passwrod">找回密码</string>
    <string name="sure">确定</string>
    <string name="phone_num_rp">请输入您的账号</string>
    <string name="old_password_rp">请输入您当前的密码（6～16位）</string>
    <string name="new_password_rp">请输入您要设置的密码（6～16位）</string>
    <string name="new_password_again_rp">请确认您要设置的密码（6～16位）</string>
    <string name="revise_password">修改密码</string>
    <string name="change_city_search">输入你想切换的城市</string>
    <string name="location_city">当前定位城市：</string>
    <string name="choose_city">当前选择城市：</string>
    <string name="reset_passwrod">重置密码</string>
    <string name="next">下一步</string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="pic">图片</string>
    <string name="search_good_list">商品查询列表</string>
    <string name="selfrun_good_list">商品列表</string>
    <string name="all_evaluate">所有评论</string>
    <string name="shopping_car">购物车</string>
    <string name="usable_coupon">可用优惠券</string>
    <string name="payment_success">支付成功</string>
    <string name="pay_password">设置支付密码</string>
    <string name="order_management">订单管理</string>
    <string name="all">全部</string>
    <string name="pending_payment">待付款</string>
    <string name="pending_delivery">待发货</string>
    <string name="pending_collect_goods">待收货</string>
    <string name="pending_evaluate">待评价</string>
    <string name="order_detail">订单详情</string>
    <string name="demand_detail">需求详情</string>
    <string name="foot_print">足迹</string>
    <string name="clean_up">清空</string>
    <string name="collection">收藏</string>
    <string name="my_demand">我的需求</string>
    <string name="release">发布</string>
    <string name="pending_order">待接单</string>
    <string name="pending_sure">待确认</string>
    <string name="conducting">进行中</string>
    <string name="completed">已完成</string>
    <string name="send_demand">发布需求</string>
    <string name="revise">修改</string>
    <string name="delete">删除</string>
    <string name="copyright">© 2018 石家庄爱团科技有限公司. ALL rights reserved</string>
    <string name="funcErr">功能异常</string>
    <string name="productAdvice">产品建议</string>
    <string name="otherErr">其它问题</string>
    <string name="revise_order">修改订单</string>
    <string name="confirm_complete">确认完成</string>
    <string name="send_evaluate">发表评论</string>
    <string name="setting">设置</string>
    <string name="mine">个人中心</string>
    <string name="collect_goods_address">收货地址</string>
    <string name="my_shopping_car">我的购物车</string>
    <string name="login_out">退出账号</string>
    <string name="security_center">安全中心</string>
    <string name="account_message">账户信息</string>
    <string name="about_us">关于我们</string>
    <string name="security">密保问题</string>
    <string name="security_text">您可以创建三个密保问题，这样在进行\n修改密码等操作时，会进行密码问题的\n校验。</string>
    <string name="create_security">创建密保问题</string>
    <string name="submit">提交</string>
    <string name="feedback">意见反馈</string>
    <string name="check_update">检查更新</string>
    <string name="customer_service_center">客服中心</string>
    <string name="address_magament">管理收货地址</string>
    <string name="add">添加</string>
    <string name="add_address">添加收货地址</string>
    <string name="edit_address">修改收货地址</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="camera">拍照</string>
    <string name="album">相册</string>
    <string name="permissionError">我们需要的一些权限被您拒绝或者系统发生错误申请失败，请您到设置页面手动授权，否则部分功能可能无法正常使用！</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="customer_service_qq">客服QQ</string>
    <string name="customer_service_phone">客服电话</string>
    <string name="registering">注册中</string>
    <string name="register_failed">注册失败</string>
    <string name="logining">登录中</string>
    <string name="login_failed">登录失败</string>
    <string name="login_exception">登录异常</string>
    <string name="again_order">再来一单</string>
    <string name="selectAuthenticationType">选择身份验证方式</string>
    <string name="phoneAuth">手机验证</string>
    <string name="safetyQuestionAuth">密保问题验证</string>
    <string name="authNotSelect">请选择身份验证方式！</string>
    <string name="forgetPsw">忘记密码？</string>
    <string name="forgetPsw2">忘记密码</string>
    <string name="retrievePsw">找回密码</string>
    <string name="haveNotSetSafetyQuestion">您还没有设置过密保问题哦！</string>
    <string name="authSuccess">身份验证成功！</string>
    <string name="authError">身份验证失败，请稍后重试！</string>
    <string name="yourAnswer">您的答案</string>
    <string name="question1">问题1：</string>
    <string name="question2">问题2：</string>
    <string name="question3">问题3：</string>
    <string name="yourAnswerEmpty">请填写您的答案！</string>
    <string name="captchaTip2">账号密码已发送，请注意查收!</string>
    <string name="safeCenter">安全中心</string>
    <string name="safetyQuestion">密保问题</string>
    <string name="settingSafetyQuestion">设置密保问题</string>
    <string name="changeSafetyQuestion">修改密保问题</string>
    <string name="portError">服务异常，请稍后重试！</string>
    <string name="inputCaptcha2">请输入验证码</string>
    <string name="captchaEmpty">验证码不能为空！</string>
    <string name="captchaError">验证码错误！</string>
    <string name="tip">您可以创建三个密保问题，以便在进行敏感操作时保护您的账号安全。</string>
    <string name="tip2">您已设置过密保问题，是否进行修改？</string>
    <string name="settingSuccess">设置成功！</string>
    <string name="authOldQuestion">请先行验证当前密保问题：</string>
    <string name="newQuestion">新问题：</string>
    <string name="auth">验证</string>
    <string name="captchaTip">验证码已发送，请注意查收!</string>
    <string name="unSetting">未设置</string>
    <string name="alreadySetting">已设置</string>
    <string name="updateSuccess">修改成功！</string>
    <string name="notNeedUpdate">已经是最新版本！</string>
    <string name="newVersion">有可用的新版本！</string>
    <string name="ignoreNewVersion">忽略此版本</string>
    <string name="updateNew">立即更新</string>
    <string name="downloading">下载中，请稍后···</string>
    <string name="serviceTel">客服热线：18348888899</string>
    <string name="serviceQQ">QQ：89158726</string>
    <string name="label_select_picture">选择图片来源</string>
    <string name="sure_inspection_goods">确认验货</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="location_navigate">导航</string>
    <string name="location_loading">正在定位</string>
    <string name="location_map">地图定位</string>
    <string name="my_location">我的位置</string>
    <string name="location_address_unkown">该位置信息暂无</string>
    <string name="format_mylocation">我的位置：%s</string>
    <string name="location_address_fail">获取位置信息失败</string>
    <string name="tools_selected">选择工具</string>
    <string name="friends_map_navigation_web">在网页中打开</string>
    <string name="location_open_map_error">打开地图出错</string>
    <string name="send">发送</string>
    <string name="personal_data">个人资料</string>
    <string name="go_in_shop">进店铺</string>
    <string name="payFailed">支付失败！</string>
    <string name="payCancle">取消支付！</string>
    <string name="paySuccess">支付成功！</string>
    <string name="payResult">支付结果</string>
    <string name="quitApp">再按一次退出程序</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- 云信SDK所需文案 -->
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>
    <!-- 多端在线类型 -->
    <string name="on_line">在线</string>
    <string name="on_line_pc">PC在线</string>
    <string name="on_line_mac">Mac在线</string>
    <string name="on_line_web">web在线</string>
    <string name="client_aos">Android</string>
    <string name="client_ios">iOS</string>
    <string name="on_line_busy">忙碌</string>
    <string name="off_line">离线</string>
    <string name="aMapLocationNotInit">请先行初始化高德地图定位服务！</string>
</resources>
