<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@mipmap/icon_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/order_management"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_below="@+id/rl_title"
        android:background="@color/grayline" />

    <com.viewpagerindicator.TabPageIndicator
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/view"
        android:background="@color/white"
        android:gravity="center_vertical" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_below="@+id/indicator"
        android:background="@color/grayline" />
    <!-- 顶部导航栏 -->
    <LinearLayout
        android:id="@+id/ll_select"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/view"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/all"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_pending_payment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pending_payment"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_pending_delivery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pending_delivery"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_pending_collect_goods"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pending_collect_goods"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_pending_evaluate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pending_evaluate"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>
    <!-- Tab底部下划线 -->
    <ImageView
        android:id="@+id/iv_tab_bottom_img"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_below="@+id/indicator"
        android:scaleType="matrix"
        android:src="@drawable/under_line"
        android:visibility="gone" />

    <!-- 内容页 -->
    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/view1"
        android:layout_gravity="center"
        android:background="#ffffff" />
</RelativeLayout>