<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@mipmap/icon_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/revise_password"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_below="@+id/rl_title"
        android:background="@color/grayline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="37.5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_phoneNum"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:hint="@string/phone_num_rp"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text" />

            <EditText
                android:id="@+id/et_oldPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:drawableRight="@mipmap/icon_password"
                android:gravity="center_vertical"
                android:hint="@string/old_password_rp"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text" />

            <EditText
                android:id="@+id/et_newPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:drawableRight="@mipmap/icon_password"
                android:gravity="center_vertical"
                android:hint="@string/new_password_rp"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text" />

            <EditText
                android:id="@+id/et_newPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:drawableRight="@mipmap/icon_password"
                android:gravity="center_vertical"
                android:hint="@string/new_password_again_rp"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text" />
        </LinearLayout>

        <Button
            android:id="@+id/retrievePasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape_btn_blue"
            android:elevation="5dp"
            android:enabled="true"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:textSize="@dimen/text"
            android:translationZ="10dp"
            android:visibility="visible" />
    </LinearLayout>
</RelativeLayout>