<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@mipmap/icon_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/function_btn" />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_below="@+id/rl_title"
        android:background="@color/grayline" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:drawableLeft="@mipmap/icon_num"
        android:drawablePadding="8dp"
        android:hint="@string/phoneNum"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="@dimen/text" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/et_account"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="25dp"
        android:drawableLeft="@mipmap/icon_lock"
        android:drawablePadding="8dp"
        android:maxLength="16"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/text" />

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="@dimen/text"
        android:textColor="@color/graytext"
        android:layout_below="@+id/et_password"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:text="@string/forgetPsw"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/tv_forget"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_btn_blue"
        android:elevation="5dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/function_btn"
        android:translationZ="10dp" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@mipmap/zhezhao"
        android:padding="15dp"
        android:visibility="gone"
        android:translationZ="10dp"
        android:elevation="5dp"/>
</RelativeLayout>
