<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context=".activity.CustomerServiceCenterActivity">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@mipmap/icon_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/customer_service_center"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_below="@+id/rl_title"
        android:background="@color/grayline" />


    <TextView
        android:id="@+id/tv_qq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:padding="15dp"
        android:text="@string/serviceQQ"
        android:textColor="@color/black"
        android:textSize="@dimen/function_btn" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_below="@+id/tv_qq"
        android:background="@color/grayline" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:background="@color/white"
        android:padding="15dp"
        android:text="@string/serviceTel"
        android:textColor="@color/black"
        android:textSize="@dimen/function_btn" />
</RelativeLayout>